pkg/manifests/assets/canary/daemonset.yaml
# Hello Openshift Ingress Canary daemonset
# Specific values are set at runtime
kind: DaemonSet
apiVersion: apps/v1
# name and namespace are set at runtime.
spec:
  progressDeadlineSeconds: 600
  template:
    metadata:
      annotations:
        target.workload.openshift.io/management: '{"effect": "PreferredDuringScheduling"}'
        openshift.io/required-scc: restricted-v2
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      priorityClassName: system-cluster-critical
      containers:
        - name: serve-healthcheck-canary
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          # Image and command are set at runtime
          imagePullPolicy: IfNotPresent
          terminationMessagePolicy: FallbackToLogsOnError
          ports:
          - containerPort: 8443
            protocol: TCP
          - containerPort: 8888
            protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
          volumeMounts:
          - name: cert
            mountPath: /etc/tls-cert
          - name: tmp
            mountPath: /tmp
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - key: node-role.kubernetes.io/infra
          operator: Exists
      volumes:
      - name: cert
        secret:
          secretName: canary-serving-cert
          defaultMode: 0420
      # Provides a writable /tmp directory since readOnlyRootFilesystem is enabled.
      - name: tmp
        emptyDir: {}
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      # Note: The daemon controller rounds the percentage up
      # (unlike the deployment controller, which rounds down).
      maxUnavailable: 10%
