pkg/manifests/assets/canary/service.yaml
# Hello Openshift Ingress Canary service
# Specific values are applied at runtime
kind: Service
apiVersion: v1
metadata:
  # name and namespace are set at runtime.
  annotations:
      service.beta.openshift.io/serving-cert-secret-name: canary-serving-cert
spec:
  type: ClusterIP
  # ports are set at runtime.
