pkg/manifests/assets/canary/route.yaml
# Hello Openshift Ingress Canary route
# Specific values are applied at runtime
kind: Route
apiVersion: route.openshift.io/v1
# name and namespace are set at runtime.
metadata:
  annotations:
    haproxy.router.openshift.io/balance: "roundrobin"
spec:
  port:
    targetPort: 8443-tcp
  to:
    kind: Service
    # Service name set at run time
    weight: 100
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
