pkg/manifests/assets/canary/networkpolicy-allow.yaml
# Canary Pods
#  No egress
#  Ingress to http on port 8888 and https on port 8443 (TCP)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
# name, namespace, labels and annotations are set at runtime
spec:
  podSelector:
    # matchLabels are set at runtime
    matchLabels: {}
  ingress:
  - ports:
    - protocol: TCP
      port: 8888
    - protocol: TCP
      port: 8443
    from:
    # depending on topology, valid canary checks will either appear to come from
    # the router's namespace or the host network.
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-ingress
    - namespaceSelector:
        matchLabels:
          policy-group.network.openshift.io/host-network: ""
  policyTypes:
  - Ingress
