pkg/manifests/assets/canary/networkpolicy-deny-all.yaml
# Default deny all policy for all pods in the namespace
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openshift-ingress-canary-deny-all
  namespace: openshift-ingress-canary
spec:
 podSelector: {}
 policyTypes:
 - Ingress
 - Egress
